src/parse_stanza.c
/* Generated by re2c 0.16 on Fri Feb 17 19:04:27 2017 */
#line 1 "parse_stanza.re"
/**
 * libamip -- Library with functions for read/create AMI packets
 * Copyright (C) 2016, Stas Kobzar <staskobzar@modulis.ca>
 *
 * This file is part of libamip.
 *
 * libamip is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * libamip is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with libamip.  If not, see <http://www.gnu.org/licenses/>.
 */

/**
 * @file amip_parse.c
 * @brief test if packet is AMI (Asterisk Management Interface) complete packet.
 *
 * @author Stas Kobzar <stas.kobzar@modulis.ca>
 */

#include "amip.h"

int amiparse_stanza (const char *packet)
{
  const char *cur = packet;


#line 38 "parse_stanza.c"
{
	unsigned char yych;
	yych = *cur;
	switch (yych) {
	case '\n':	goto yy4;
	case '\r':	goto yy5;
	default:	goto yy2;
	}
yy2:
	yych = *(packet = ++cur);
	switch (yych) {
	case '\n':	goto yy3;
	default:	goto yy7;
	}
yy3:
#line 42 "parse_stanza.re"
	{ return RV_FAIL; }
#line 56 "parse_stanza.c"
yy4:
	yych = *++cur;
	goto yy3;
yy5:
	yych = *(packet = ++cur);
	switch (yych) {
	case '\n':	goto yy11;
	default:	goto yy7;
	}
yy6:
	++cur;
	yych = *cur;
yy7:
	switch (yych) {
	case '\n':	goto yy8;
	case '\r':	goto yy9;
	default:	goto yy6;
	}
yy8:
	cur = packet;
	goto yy3;
yy9:
	++cur;
	yych = *cur;
	switch (yych) {
	case '\n':	goto yy11;
	case '\r':	goto yy9;
	default:	goto yy6;
	}
yy11:
	yych = *++cur;
	switch (yych) {
	case '\r':	goto yy12;
	default:	goto yy8;
	}
yy12:
	yych = *++cur;
	switch (yych) {
	case '\n':	goto yy13;
	default:	goto yy8;
	}
yy13:
	++cur;
#line 43 "parse_stanza.re"
	{ return RV_SUCCESS; }
#line 102 "parse_stanza.c"
}
#line 44 "parse_stanza.re"


}
